--- a/style1.css
+++ b/style1.css
@@ -196,7 +196,7 @@
             font-weight: 700;
             font-size: 2.2rem;
             text-align: center;
-            box-shadow: var(--shadow)
+            box-shadow: var(--shadow);
         }
 
         /* ------------------------------
@@ -1027,6 +1027,7 @@
        - Buggy @media 450px font-size overrides for .logo removed
        - #menu-bar color contrast fixed for light header
        ------------------------------ */
+
 
 
 
